registry/docker-registry.yaml
apiVersion: v1
kind: Service
metadata:
  name: docker-registry
  labels:
    app: docker-registry
spec:
  ports:
    - port: 5000
      name: web
      protocol: TCP
  selector:
    app: docker-registry
  type: ClusterIP

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: docker-registry
  labels:
    app: docker-registry
spec:
  selector:
    matchLabels:
      app: docker-registry
  strategy:
    type: Recreate
  replicas: 1
  template:
    metadata:
      labels:
        app: docker-registry
    spec:
      containers:
        - name: docker-registry
          image: registry:2
          ports:
            - containerPort: 5000
              hostPort: 5000
          volumeMounts:
            - name: htpasswd-secret
              mountPath: /httpasswd_storage
      volumes:
        - name: htpasswd-secret
          secret:
            secretName: basic-auth
